Login & Navbar design

--- a/angular.json
+++ b/angular.json
@@ -6,6 +6,8 @@
     "ft_transcendence": {
       "projectType": "application",
       "schematics": {
+        "@schematics/angular:component": {
+          "style": "scss" },
         "@schematics/angular:application": {
           "strict": true
         }
@@ -27,9 +29,14 @@
               "src/assets"
             ],
             "styles": [
-              "src/styles.css"
+              "node_modules/bootstrap/dist/css/bootstrap.min.css",
+              "src/styles.css",
+              "node_modules/bootstrap-icons/font/bootstrap-icons.css"
             ],
-            "scripts": []
+            "scripts": [
+              "node_modules/jquery/dist/jquery.min.js",
+              "node_modules/bootstrap/dist/js/bootstrap.bundle.min.js"
+            ]
           },
           "configurations": {
             "production": {
