--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "bootstrap": "^4.6.0",
     "bootstrap-icons": "^1.7.2",
     "jquery": "^3.6.0",
+    "ngx-cookie-service": "^13.1.2",
     "rxjs": "~7.4.0",
     "tslib": "^2.3.0",
     "zone.js": "~0.11.4"
